<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022-2025 Cumulocity GmbH.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  @authors Christof Strack, Stefan Witschel
  ~
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cumulocity.mapping</groupId>
	<artifactId>dynamic-mapper-solution</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<modules>
		<module>dynamic-mapper-interface</module>
		<module>dynamic-mapper-service</module>
		<module>dynamic-mapper-extension</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<revision>6.1.5-SNAPSHOT</revision>
		<spring-boot-dependencies.version>3.3.5</spring-boot-dependencies.version>
		<c8y.version>2025.81.0</c8y.version>
		<lombok.version>1.18.38</lombok.version>
		<slf4j.version>2.0.17</slf4j.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<graalvm.version>23.1.7</graalvm.version>
		<graalvm.js.version>23.1.7</graalvm.js.version>
		<springdoc.version>2.8.5</springdoc.version>
		<spring-ai.version>1.1.0-SNAPSHOT</spring-ai.version>
		<pulsar.version>4.0.5</pulsar.version>
		<camel.version>4.2.0</camel.version>
		<!-- <spring-ai.version>1.0.1</spring-ai.version> -->
		<authToken>${env.AUTH_TOKEN}</authToken>
	</properties>

	<repositories>
		<repository>
			<id>cumulocity</id>
			<layout>default</layout>
			<url>https://download.cumulocity.com/maven/repository</url>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<name>Central Portal Snapshots</name>
			<id>central-portal-snapshots</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>cumulocity</id>
			<layout>default</layout>
			<url>https://download.cumulocity.com/maven/repository</url>
		</pluginRepository>
	</pluginRepositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.opentelemetry.instrumentation</groupId>
				<artifactId>opentelemetry-instrumentation-bom</artifactId>
				<version>2.16.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.opentelemetry</groupId>
				<artifactId>opentelemetry-bom</artifactId>
				<version>1.50.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>pulsar-bom</artifactId>
				<version>${pulsar.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>pulsar-client</artifactId>
				<version>${pulsar.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>pulsar-common</artifactId>
				<version>${pulsar.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>pulsar-client-api</artifactId>
				<version>${pulsar.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>pulsar-client-admin-api</artifactId>
				<version>${pulsar.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.pulsar</groupId>
				<artifactId>bouncy-castle-bc</artifactId>
				<version>${pulsar.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>2.9.0</version>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.clients-java</groupId>
				<artifactId>java-client</artifactId>
				<version>${c8y.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.clients-java</groupId>
				<artifactId>microservice-autoconfigure</artifactId>
				<version>${c8y.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.clients-java</groupId>
				<artifactId>microservice-dependencies</artifactId>
				<version>${c8y.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.nsn.cumulocity.model</groupId>
				<artifactId>device-capability-model</artifactId>
				<version>${c8y.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents.client5</groupId>
				<artifactId>httpclient5</artifactId>
				<version>5.5</version>
			</dependency>
			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java</artifactId>
				<version>4.33.4</version>
			</dependency>
			<dependency>
				<groupId>com.hivemq</groupId>
				<artifactId>hivemq-mqtt-client</artifactId>
				<version>1.3.7</version>
			</dependency>
			<dependency>
				<groupId>com.rabbitmq</groupId>
				<artifactId>amqp-client</artifactId>
				<version>5.21.0</version>
			</dependency>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>4.2.1.Final</version>
			</dependency>
			<dependency>
				<groupId>com.dashjoin</groupId>
				<artifactId>jsonata</artifactId>
				<version>0.9.9</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.18.0</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>org.java-websocket</groupId>
				<artifactId>Java-WebSocket</artifactId>
				<version>1.6.0</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20250517</version>
			</dependency>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>3.9.1</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>6.1.12</version>
			</dependency>
			<dependency>
				<groupId>com.github.loki4j</groupId>
				<artifactId>loki-logback-appender</artifactId>
				<version>1.6.0</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.5.0-M2</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.polyglot</groupId>
				<artifactId>polyglot</artifactId>
				<version>${graalvm.js.version}</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.polyglot</groupId>
				<artifactId>js</artifactId>
				<version>${graalvm.js.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-webflux</artifactId>
				<version>3.3.5</version>
			</dependency>
			<!-- Explicitly include the core OpenAPI models -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>2.2.15</version>
			</dependency>

			<!-- Explicitly include the core annotations -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.15</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<!-- Camel Spring Boot Starter -->
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-starter</artifactId>
				<version>${camel.version}</version>
			</dependency>

			<!-- Camel Core (included in starter but explicit for clarity) -->
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-core</artifactId>
				<version>${camel.version}</version>
			</dependency>

			<!-- Camel Direct component for internal routing -->
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-direct</artifactId>
				<version>${camel.version}</version>
			</dependency>

			<dependency>
				<groupId>com.rabbitmq</groupId>
				<artifactId>amqp-client</artifactId>
				<version>5.21.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.5.0</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
						<flattenMode>resolveCiFriendliesOnly</flattenMode>
						<pomElements>
							<dependencyManagement>expand</dependencyManagement>
						</pomElements>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten.clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>